Direct3D 9
	* Fixed a bug that caused AdapterDetails.GetCertification to throw when the adapter wasn't certified.

Direct3D 10
	* Added an overload to Direct3D10.Device.UpdateSubresource() that allows the update to occur without a destination offset.

DirectSound
	* Removed the confusing lockEntireBuffer parameter from CaptureBuffer.Read.

DirectInput
	* Refactored the Device class into an abstract base class.
	* Added a CustomDevice<T> class for devices with custom data formats.
	* Added the Keyboard class for keyboard devices.
	* Added the Mouse class for mouse devices.
	* Added the Joystick class for joystick devices.
	* Changed a few collection results to return IList<T> instead of IEnumerable<T>.
	* Removed the BufferedData indirection. Buffered data reads now return direct lists of data.
	* Did some general code clean-up in DirectInput to better match recent changes in the library.